--- a/cmd/manageweb/config.yaml
+++ b/cmd/manageweb/config.yaml
@@ -16,7 +16,7 @@ mysql:
        host: 127.0.0.1
        port: 3306
        user: root
-       password: 123456
+       password: bjj6485200
        db_name: goapp
        parameters: charset=utf8&parseTime=True&loc=Asia%2FShanghai
 sqlite3: 
